Delete button problem fixe

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,6 +12,7 @@
 <body>
   <h1>Ironhack Merchandising Shop</h1>
 
+<div class ="row">
   <div class="container col-xs-1">
     <span class="item">IronBubble-head</span>
   </div>
@@ -27,7 +28,9 @@
   <div class="container col-xs-5">
     <button>Delete</button>
   </div>
+</div>
 
+<div class="row">
   <div class="container col-xs-1">
     <span class="item">Ironshirt</span>
   </div>
@@ -43,6 +46,7 @@
   <div class="container col-xs-5">
     <button>Delete</button>
   </div>
+</div>
 
   <h2>
     Total Price: <span>$0.00</span>
